updated tests and fixed sonar issues.